[workspace]

members = [
    "crates/*",
    "crates/binary-fuse-map/benchmarks",
    "crates/cuckoo-filter/benchmarks",
    "crates/bpe/benchmarks",
    "crates/bpe/tests",
    "crates/casefold/benchmarks",
    "crates/consistent-choose-k/benchmarks",
    "crates/hash-sorted-map/benchmarks",
]
resolver = "2"

[profile.bench]
debug = true

[profile.release]
debug = true