[package]
name = "bpe-openai"
version = "0.1.1"
edition = "2021"
description = "Prebuilt fast byte-pair encoders for OpenAI."
repository = "https://github.com/github/rust-gems"
license = "MIT"
keywords = ["tokenizer", "algorithm", "encoding", "bpe"]
categories = ["algorithms", "data-structures", "encoding", "science"]

[lib]
crate-type = ["lib", "staticlib"]
bench = false

[dependencies]
bpe = { version = "0.1.0", path = "../bpe" }
either = "1.13"
fancy-regex = "0.13"
rmp-serde = "1"
serde = { version = "1" }

[dev-dependencies]
tiktoken-rs = "0.6"

[build-dependencies]
base64 = "0.22.1"
bpe = { version = "0.1.0", path = "../bpe", features = ["tiktoken"] }
flate2 = "1.0"
rmp-serde = "1"
serde = { version = "1" }
