[package]
name = "bpe"
version = "0.1.0"
edition = "2021"
description = "Fast byte-pair encoding implementation."
repository = "https://github.com/github/rust-gems"
license = "MIT"
keywords = ["tokenizer", "algorithm", "encoding", "bpe"]
categories = ["algorithms", "data-structures", "encoding", "science"]

[lib]
crate-type = ["lib", "staticlib"]
bench = false

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[features]
rand = ["dep:rand"]
tiktoken-rs = ["dep:tiktoken-rs"]

[dependencies]
aneubeck-daachorse = "1.1.1"
fnv = "1.0"
itertools = "0.12"
rand = { version = "0.8", optional = true }
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
tiktoken-rs = { version = "0.5", optional = true }

[dev-dependencies]
bpe = { path = ".", features = ["rand", "tiktoken-rs"] }
criterion = "0.5"
