[package]
name = "github_geometric_filter"
version = "0.1.0"
authors = ["Greg Orzell <gorzell@github.com>", "Vicent Marti <vmg@github.com>"]
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[features]
test-support = ["rand", "rand_chacha"]

[dependencies]
github_lock_free = { path = "../lock_free" }
github_pspack = { path = "../pspack" }
github_sha = { path = "../sha" }
github_stable_hash = { path = "../stable_hash" }

dataview = "1.0.1"
fnv = "1.0"
hex = "0.4"
itertools = "0.11"
once_cell = "1.18"
rand = { version = "0.8", optional = true }
rand_chacha = { version = "0.3", optional = true }
serde = { version = "1.0", features = [ "derive" ] }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
