[package]
name = "hriblt"
version = "0.1.0"
edition = "2024"
description = "Algorithm for rateless set reconciliation"
repository = "https://github.com/github/rust-gems"
license = "MIT"
keywords = ["set-reconciliation", "sync", "algorithm", "probabilistic"]
categories = ["algorithms", "data-structures", "mathematics", "science"]

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"], optional = true }
rand = { version = "0.9", optional = true }

[[bin]]
name = "hriblt-bench"
path = "evaluation/bench.rs"
required-features = ["bin"]

[features]
default = []
bin = ["dep:clap", "dep:rand"]
