[package]
name = "posting_lists"
version = "0.1.0"
edition = "2021"
description = "Geometric filters for set cardinality estimation."
repository = "https://github.com/github/rust-gems"
license = "MIT"
keywords = ["probabilistic", "algorithm", "cardinality", "estimation"]
categories = ["algorithms", "data-structures", "mathematics", "science"]

[lib]
crate-type = ["lib", "staticlib"]
bench = false

[dependencies]
clap = { version = "4", optional = true, features = ["derive"] }
fnv = "1.0"
hyperloglogplus = { version = "0.4", optional = true }
itertools = "0.14"
once_cell = "1.18"
rand = { version = "0.9", optional = true }
rayon = { version = "1.7", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1.0", default-features = false, optional = true }
rand_chacha = { version = "0.9", optional = true }
unroll = "0.1.5"

[dev-dependencies]
criterion = "0.7"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.7"
