[package]
name = "github_pspack"
version = "0.1.0"
authors = ["Colin Merkel <colinwm@github.com>"]
edition = "2021"

[features]
fuzz = ["arbitrary"]

[dependencies]
arbitrary = { version = "1.3", features = ["derive"], optional = true }
base64 = "0.21.5"
paste = "1.0"

[dev-dependencies]
proptest = "1.3"
criterion = "0.5"

[lib]
bench = false

[[bin]]
name = "fuzz"
path = "src/bin/fuzz.rs"
required-features = ["fuzz"]
bench = false

[[bench]]
name = "struct_read"
harness = false
