[package]
name = "github_sha"
version = "0.1.0"
authors = ["Greg Orzell <gorzell@github.com>", "Vicent Marti <vmg@github.com>"]
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
github_lock_free = { path = "../lock_free" }
github_pspack = { path = "../pspack" }
github_stable_hash = { path = "../stable_hash" }

dataview = "1.0.1"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = [ "derive" ] }
sha-1 = "0.10"
sha2 = "0.10"
thiserror = "1.0"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
