[package]
name = "sparse-ngrams"
version = "0.1.0"
edition = "2021"
description = "Fast sparse n-gram extraction from byte slices."
repository = "https://github.com/github/rust-gems"
license = "MIT"
keywords = ["ngram", "algorithm", "search", "index"]
categories = ["algorithms", "data-structures", "text-processing"]

[lib]
bench = false

[features]
# Derive `serde::{Serialize, Deserialize}` for `NGram`.
serde = ["dep:serde"]

[dependencies]
casefold = { version = "0.1", path = "../casefold" }
serde = { version = "1", features = ["derive"], optional = true }

[[bench]]
name = "performance"
path = "benchmarks/performance.rs"
harness = false

[dev-dependencies]
criterion = "0.8"
