[package]
name = "sparse-ngrams"
version = "0.2.0"
edition = "2024"
description = "Fast sparse n-gram extraction from byte slices."
repository = "https://github.com/github/rust-gems"
license = "MIT"
keywords = ["ngram", "algorithm", "search", "index"]
categories = ["algorithms", "data-structures", "text-processing"]
# `data/` holds the reference bigram ranking used only for offline model training/verification;
# it is not needed to build or use the crate, so keep it out of the published package.
exclude = ["data/"]

[lib]
bench = false

[features]
# Derive `serde::{Serialize, Deserialize}` for `NGram`.
serde = ["dep:serde"]

[dependencies]
casefold = { version = "0.1", path = "../casefold" }
serde = { version = "1", features = ["derive"], optional = true }

[[bench]]
name = "performance"
path = "benchmarks/performance.rs"
harness = false

[dev-dependencies]
criterion = "0.8"
