[package]
name = "string-offsets"
authors = ["The blackbird team <support@github.com>"]
version = "0.1.0"
edition = "2021"
description = "Offset calculator to convert between byte, char, and line offsets in a string."
repository = "https://github.com/github/rust-gems"
license = "MIT"
keywords = ["unicode", "string", "offsets", "positions", "interoperability"]
categories = ["algorithms", "data-structures", "text-processing", "development-tools::ffi"]

[dev-dependencies]
itertools = "0.13"
rand = "0.8"
rand_chacha = "0.3"
