[package]
name = "string-offsets"
authors = ["The blackbird team <support@github.com>"]
version = "0.1.0"
edition = "2021"
description = "Converts string offsets between UTF-8 bytes, UTF-16 code units, Unicode code points, and lines."
repository = "https://github.com/github/rust-gems"
license = "MIT"
keywords = ["unicode", "positions", "utf16", "characters", "lines"]
categories = ["algorithms", "data-structures", "text-processing", "development-tools::ffi"]
exclude = ["/js"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
