[package]
name = "github_tree_path"
version = "0.1.0"
authors = ["Greg Orzell <gorzell@github.com>", "Vicent Marti <vmg@github.com>"]
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
github_interval = { path = "../interval" }
github_lock_free = { path = "../lock_free" }
github_pspack = { path = "../pspack" }
github_stable_hash = { path = "../stable_hash" }

hex = "0.4"
itertools = "0.11"
serde = { version = "1.0", features = [ "derive" ] }
thiserror = "1.0"
