[package]
name = "bpe-benchmarks"
edition = "2021"

[lib]
path = "lib.rs"
test = false

[[bench]]
name = "performance"
path = "performance.rs"
harness = false
test = false

[[test]]
name = "equivalence"
path = "equivalence.rs"
test = true

[dependencies]
bpe = { path = "../../bpe", features = ["rand", "tiktoken"] }
bpe-openai = { path = "../../bpe-openai" }
criterion = "0.7"
rand = "0.9"
tiktoken-rs = "0.7"
tokenizers = { version = "0.22", features = ["http"] }
